--- a/bots/templates/projects/sidebar.html
+++ b/bots/templates/projects/sidebar.html
@@ -132,7 +132,7 @@
                        hx-swap="outerHTML"
                        hx-push-url="true"
                        onclick="setActiveLink(this)">
-                        <i class="bi bi-robot"></i> App Sessions
+                        <i class="bi bi-app-indicator"></i> App Sessions
                     </a>
                 </nav>
                 
